--- a/movieapp-db/src/main/config/localhost.properties
+++ b/movieapp-db/src/main/config/localhost.properties
@@ -1,8 +1,9 @@
 # environment properties for local development
 
-server.host = localhost
+server.host = mydbinstance.cosdhgrucq4i.us-east-1.rds.amazonaws.com
+
 server.port = 5432
 
 database.name = moviedb
 database.user = postgres
-database.password = postgres@123
+database.password = postgres123
